--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-hook-form": "^7.59.0",
     "recharts": "^3.0.2",
     "resend": "^4.6.0",
+    "slugify": "^1.6.6",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
